# schelk

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md  build.rs
.github/workflows/: ci.yml
ci/: run-vm-tests.sh  vm-init.sh
docs/: SKILL.md  principles.md  spec.md  user-stories.md
src/: cli.rs  cmd.rs  confirm.rs  dmera.rs  env.rs  error.rs  io.rs  main.rs  mount.rs  ramdisk.rs  state.rs  timing.rs  uring.rs  volume.rs
src/commands/: format.rs  full_recover.rs  init.rs  init_common.rs  init_from.rs  init_new.rs  mod.rs  mount.rs  promote.rs  recover.rs  restore.rs  status.rs
src/io/: mod.rs  uring.rs
