[package]
name = "schelk"
version = "0.1.0"
edition = "2024"
authors = ["Sergei Shulepov <pep@tempo.xyz>"]
repository = "https://github.com/tempoxyz/schelk"
description = "Fast snapshot rollback tool using dm-era for database bench"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
nix = { version = "0.30", features = ["fs", "mount", "signal", "user"] }
quick-xml = "0.38"
ext4-mkfs = "0.1.0"

[dev-dependencies]
tempfile = "3"
